update some basic structure

--- a/public/assets/scss/_element.scss
+++ b/public/assets/scss/_element.scss
@@ -407,8 +407,9 @@
 // Counter Two
 .counter-block-two {
     .main-count {
-        // font-size: 60px;
-        font-size: 48px;
+        font-size: 60px;
+        font-weight: 700;
+        // font-size: 48px;
         color: $heading;
         margin-bottom: -5px;
     }
