--- a/public/assets/scss/_base.scss
+++ b/public/assets/scss/_base.scss
@@ -188,14 +188,14 @@ hr {opacity: 0.09; margin: 5px 0;}
   line-height: 52px;
   text-align: center;
   padding: 0 35px;
-  border: 1px solid #fff;
+  border: 1px solid $color-one;
   border-radius: 50px;
   @include transition(0.3s);
   .icon {
     width: 1.35em;
   }
   &:hover {
-    background: $color-two;
+    background: $color-one;
     border-color: $color-two;
   }
 }
@@ -478,12 +478,12 @@ hr {opacity: 0.09; margin: 5px 0;}
   }
 }
 .btn-seventeen {
-  color: #000;
+  color: #fff;
   font-weight: 500;
   padding: 0 30px;
   line-height: 55px;
   border-radius: 40px;
-  background: #FFE86B;
+  background: #292e31;
   i {
     margin-left: 8px;
   }
