--- a/public/assets/scss/_footer.scss
+++ b/public/assets/scss/_footer.scss
@@ -34,7 +34,8 @@
         line-height: 46px;
         @include transition(0.2s);
         &:hover {
-            color: #fff;
+            color: $color-one;
+            transform: translate(3px);
         }
     }
     .footer-newsletter {
