--- a/public/assets/scss/_header.scss
+++ b/public/assets/scss/_header.scss
@@ -106,7 +106,7 @@
         .nav-item:hover .nav-link {color: $color-one;}
         &.fixed {
             background: $color-three;
-            border: none;
+            // border: none;
         }
     }
 
@@ -180,7 +180,7 @@
 .navbar .dropdown-menu .dropdown-item {
     text-transform: capitalize;
     line-height: 35px; 
-    color: $heading;
+    color: #fff;
     font-size: 18px;
     background: transparent;
     position: relative;
@@ -194,7 +194,7 @@
             bottom: -2px;
             width: 100%;
             height: 1px;
-            background: $color-three;
+            background: $color-one;
             transform: scale(0 , 1);
             transform-origin: 0 0;
             @include transition(0.2s);
@@ -330,7 +330,7 @@
 .navbar .dropdown-menu {
     font-size: 1em;
 	z-index: 5;
-	background-color: #fff;
+	background-color: $color-two;
 	// border-radius: 10px;
 	display: block;
 	right: auto;
@@ -343,7 +343,7 @@
 	opacity: 0;
 	min-width: 200px;
 	box-shadow: 0px 50px 100px rgba(0, 0, 0, 0.12);
-	margin: 0;
+	margin-top: 6;
 	transform-origin: 0 0;
 	transition: all 0.3s ease-out;
     &:before {
@@ -405,7 +405,7 @@
         padding: 0;
         border-radius: 0;
         margin: 0;
-        background: #fff;
+        background: $color-two;
     }
     .navbar [class*="mega-dropdown"] .dropdown-menu {padding: 0; min-width: 100%;}
     .navbar [class*="mega-dropdown"] .menu-column {padding: 0;}
