--- a/public/assets/scss/_layout.scss
+++ b/public/assets/scss/_layout.scss
@@ -946,7 +946,7 @@
                 // margin: 0 2px 10px;
                 margin:2px 10px;
                 &.active {
-                    background: $color-two;
+                    background: $color-one;
                     color: #fff;
                 }
             }
