--- a/public/assets/scss/_variables.scss
+++ b/public/assets/scss/_variables.scss
@@ -9,16 +9,16 @@ $text-color: rgba(0,0,0,0.7);
 $text-dark: #000;
 $text-white: #fff;
 $heading: #2B2B2B;
-$color-one: #4BEDDB;
-$color-two: #012D50;
-$color-three:#012D50;
-$color-four: #4BEDDB;
+$color-one: #62c087;
+$color-two: #292e31;
+$color-three:#292e31;
+$color-four: #62c087;
 $color-five: #0E3E2F;
 // $color-six: #DFFF5E;
-$color-six: #4BEDDB;
+$color-six: #62c087;
 // $color-seven: #044F3B;
-$color-seven: #012D50;
-$color-eight: #012D50;
+$color-seven: #292e31;
+$color-eight: #292e31;
 // $color-eight: #1F5E59;
 $light-bg-one: #EBF3EE;
 $light-bg-two: #EDF1EE;
