--- a/public/assets/scss/_banner.scss
+++ b/public/assets/scss/_banner.scss
@@ -454,7 +454,7 @@
         width: 200px;
         height: 200px;
         padding: 22px;
-        background: $color-two;
+        background: $color-one;
         &:hover {
             transform: rotate(15deg);
         }
