--- a/public/assets/scss/_card.scss
+++ b/public/assets/scss/_card.scss
@@ -184,7 +184,7 @@
     .icon {
         width: 60px;
         height: 60px;
-        background: #FFE86B;
+        background: #62c087;
     }
     h3 {
         font-size: 32px;
