--- a/public/assets/scss/_layout.scss
+++ b/public/assets/scss/_layout.scss
@@ -145,7 +145,7 @@
         }
     }
     .block-three {
-        background: #D3FF76;
+        background: #62c087;
         .tag {
             font-size: 13px;
             letter-spacing: 1px;
