updated home page

--- a/public/assets/scss/_card.scss
+++ b/public/assets/scss/_card.scss
@@ -180,14 +180,15 @@
 // Card Nine
 .card-style-nine {
     background: #F6F6F6;
-    padding: 50px 55px 0;
+    // padding: 50px 55px 0;
+    padding: 45px 40px 0;
     .icon {
         width: 60px;
         height: 60px;
         background: #62c087;
     }
     h3 {
-        font-size: 32px;
+        font-size: 30px;
     }
 }
 // Card Ten
