--- a/public/assets/scss/_layout.scss
+++ b/public/assets/scss/_layout.scss
@@ -706,19 +706,44 @@
 // Text Feature Seven
 .text-feature-seven {
     ul li {
+        width: 100%;
+        display: inline-block;
         font-weight: 500;
-        color: $color-five;
+        color: $text-dark;
+        padding: 6px 50px 6px 50px;
+        border-radius: 45px;
+        background: #fff;
+        // margin: 7px 0;
         position: relative;
-        padding-left: 33px;
-        margin-bottom: 22px;
+
+        &:before {
+            content: '';
+            position: absolute;
+            width: 28px;
+            height: 28px;
+            border-radius: 50%;
+            background: $color-one;
+            left: 10px;
+            top:7px;
+            @include transition(0.2s);
+        }
         &:after {
             content: '\F633';
             position: absolute;
             font-family: $bootstrapFont;
-            top:1px;
-            left: 0;
+            top:8px;
+            left: 14px;
+            color: $color-two;
+            @include transition(0.2s);
+        }
+        &:hover:before {
+            background: $color-two;
+        }
+        &:hover:after {
+            color:#fff;
         }
     }
+
 }
 // Text Feature Nine
 .text-feature-nine {
