--- a/public/assets/scss/_responsive.scss
+++ b/public/assets/scss/_responsive.scss
@@ -51,7 +51,8 @@
   .feedback-block-one blockquote {font-size: 28px;}
   // .blog-meta-one .post-data .blog-title {font-size: 28px;}
   .blog-meta-one .post-data .blog-title {font-size: 26px;}
-  .hero-banner-two .hero-heading {font-size: 80px;}
+  // .hero-banner-two .hero-heading {font-size: 80px;}
+  .hero-banner-two .hero-heading {font-size: 68px;}
   .hero-banner-three .hero-heading {font-size: 80px;}
   .text-feature-four .quote-text {font-size: 38px;}
   .text-feature-four .name {font-size: 25px;}
@@ -83,7 +84,7 @@
   .fancy-banner-six h2 {font-size: 72px;}
   // .service-details .details-meta h2 {font-size: 55px;}
   .service-details .details-meta h2 {font-size: 52px;}
-  .service-details .details-meta h3 {font-size: 41px;}
+  .service-details .details-meta h3 {font-size: 36px;}
   .service-details .details-meta .quote-wrapper {padding: 50px 40px 60px;}
   .service-details .details-meta .quote-wrapper blockquote {font-size: 42px;}
   .blog-meta-four .post-data .blog-title h4 {font-size: 38px;}
