--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -173,7 +173,19 @@
     border: none;
 }
 
+.bgcolor{
+    background: $color-one;
+}
+.bgcolor2{
+    background: $color-two;
+}
+.fontcolor{
+    color: $color-one;
+}
 
+.paracolor{
+    color: #fff9;
+}
 
 //-----Manish----
 
