--- a/public/assets/scss/_feedback.scss
+++ b/public/assets/scss/_feedback.scss
@@ -35,13 +35,14 @@
     .line {
         width: 70%;
         height: 1px;
-        background: #000;
+        background: $color-one;
     }
     .count {
         width: 30%;
         text-align: right;
         padding-left: 15px;
-        color: rgba($color: #000000, $alpha: 0.3);
+        color: #fff9;
+        // color: rgba($color: #000000, $alpha: 0.3);
     }
 }
 // FeedBack Section Two
