--- a/public/assets/scss/_layout.scss
+++ b/public/assets/scss/_layout.scss
@@ -420,7 +420,8 @@
             padding: 0;
             position: absolute;
             bottom: 0;
-            left: -140px;
+            // left: -140px;
+            left: -180px;
             li button {
                 width: 10px;
                 height: 10px;
