--- a/public/assets/scss/_banner.scss
+++ b/public/assets/scss/_banner.scss
@@ -415,7 +415,7 @@
 // Fancy Banner Five
 .fancy-banner-five {
     // background: url(../images/media/img_31.jpg) no-repeat center;
-    background: url(../images/media/img_33.jpg) no-repeat center;
+    // background: url(../images/media/img_33.jpg) no-repeat center;
     background-size: cover;
     z-index: 1;
     &.no-bg {
@@ -433,19 +433,19 @@
             }
         }
     }
-    &:before {
-        content: '';
-        position: absolute;
-        left: 0;
-        top:0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        background: linear-gradient(to bottom right, transparent, rgba(235, 96, 110, 0.4));
-        mix-blend-mode: hard-light;
+    // &:before {
+    //     content: '';
+    //     position: absolute;
+    //     left: 0;
+    //     top:0;
+    //     width: 100%;
+    //     height: 100%;
+    //     z-index: -1;
+    //     background: linear-gradient(to bottom right, transparent, rgba(235, 96, 110, 0.4));
+    //     mix-blend-mode: hard-light;
 
 
-    }
+    // }
     h2 {
         font-size: 100px;
         line-height: 1.1em;
