--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -187,6 +187,17 @@
     color: #fff9;
 }
 
+.bg-bottom{
+    background-position: bottom;
+}
+
+.line-2 {
+    background-image: linear-gradient(#62c087, #62c087);
+    width: 72px;
+    height: 2px;
+    margin-right: 2em;
+}
+
 //-----Manish----
 
 .bgnew{
