update the pages

--- a/public/assets/scss/_contact.scss
+++ b/public/assets/scss/_contact.scss
@@ -6,7 +6,7 @@
     .icon {
         width: 80px;
         height: 80px;
-        background: $color-two;
+        background: $color-one;
     }
     .title {
         font-family: $main-font;
