--- a/public/assets/scss/_layout.scss
+++ b/public/assets/scss/_layout.scss
@@ -713,7 +713,7 @@
         color: $text-dark;
         padding: 6px 50px 6px 50px;
         border-radius: 45px;
-        background: #fff;
+        // background: #fff;
         // margin: 7px 0;
         position: relative;
 
