--- a/public/assets/scss/_feedback.scss
+++ b/public/assets/scss/_feedback.scss
@@ -160,7 +160,8 @@
   .slider-arrows {
     position: absolute;
     right: 0;
-    top:80px;
+    top:20px;
+    // top:80px;
     width: 125px;
     border: 1px solid #000;
     border-radius: 50px;
