update new parts

--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -211,6 +211,11 @@ thead, tbody, tfoot, tr, td, th {
     padding: 0.9rem 0.5rem !important;
 }
 
+.font-bold-none li {
+    font-weight: normal!important;
+    color: rgba(0, 0, 0, 0.7)!important;
+}
+
 //-----Manish----
 
 .bgnew{
