--- a/public/assets/scss/_blog.scss
+++ b/public/assets/scss/_blog.scss
@@ -249,7 +249,7 @@
             left: 50%;
             transform: translate(-50% , -50%);
         }
-        .blog-title h4 {
+        .blog-title h1, h4 {
             font-size: 43px;
             line-height: 1.302em;
             margin: 0;
