--- a/public/assets/scss/_responsive.scss
+++ b/public/assets/scss/_responsive.scss
@@ -87,7 +87,7 @@
   .service-details .details-meta h3 {font-size: 36px;}
   .service-details .details-meta .quote-wrapper {padding: 50px 40px 60px;}
   .service-details .details-meta .quote-wrapper blockquote {font-size: 42px;}
-  .blog-meta-four .post-data .blog-title h4 {font-size: 38px;}
+  .blog-meta-four .post-data .blog-title h1, h4 {font-size: 38px;}
   .hero-banner-six .hero-heading {font-size: 85px;}
   .block-feature-eleven .slider-wrapper {width: 110vw;}
   .card-style-eighteen blockquote {font-size: 30px;}
@@ -155,7 +155,7 @@
   .accordion-style-two .accordion-item .accordion-button:after {width: 30px; height: 30px; line-height: 30px; font-size: 25px;}
   .accordion-style-two .accordion-item .accordion-button:not(.collapsed):after {line-height: 22px;}
   .blog-meta-two .post-img {height: 250px; padding: 15px;}
-  .blog-meta-two .post-data .blog-title h4 {font-size: 24px;}
+  .blog-meta-two .post-data .blog-title h1, h4 {font-size: 24px;}
   .blog-meta-two .post-data .post-info {margin-top: 15px; padding-top: 10px;}
   .blog-meta-two .post-data .round-btn {width: 40px; height: 40px; font-size: 22px;}
   .fancy-banner-three .quote-btn {width: 120px; height: 120px;}
@@ -267,7 +267,7 @@
   .blog-sidebar .contact-banner h3 {font-size: 28px;}
   .blog-meta-four {padding: 55px 20px 30px;}
   .blog-meta-four .post-info {font-size: 18px; margin-top: 30px;}
-  .blog-meta-four .post-data .blog-title h4 {font-size: 28px; line-height: 1.4em;}
+  .blog-meta-four .post-data .blog-title h1, h4 {font-size: 28px; line-height: 1.4em;}
   .blog-details .post-details-meta {padding: 20px 0 0;}
   .blog-details .post-details-meta .quote-wrapper h6 {font-size: 18px;}
   .blog-details .post-details-meta .quote-wrapper .wrapper h3 {font-size: 28px;}
