--- a/public/assets/scss/_blog.scss
+++ b/public/assets/scss/_blog.scss
@@ -94,7 +94,7 @@
         .blog-title {
             // width: 70%;
             width: 80%;
-            h4 {
+            h1, h4 {
                 font-size: 32px;
                 line-height: 1.281em;  
             }
