--- a/public/assets/scss/_blog.scss
+++ b/public/assets/scss/_blog.scss
@@ -396,10 +396,10 @@
         margin-top: 30px;
         padding: 36px 0 18px;
 
-        p {
-            line-height: 1.8em;
-            margin-bottom: 30px;
-        }
+        // p {
+        //     line-height: 1.8em;
+        //     margin-bottom: 30px;
+        // }
         .quote-wrapper {
             text-align: center;
             margin: 62px 0 35px;
