update font size for blog

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -263,7 +263,9 @@
   .blog-details .post-details-meta .quote-wrapper h6 {font-size: 18px;}
   .blog-details .post-details-meta .quote-wrapper .wrapper h3 {font-size: 28px;}
   .blog-details .post-details-meta .img-gallery {margin-bottom: 40px;}
+  .blog-details .post-details-meta h2 {font-size: 27px; margin-bottom: 15px;}
   .blog-details .post-details-meta h3 {font-size: 25px; margin-bottom: 15px;}
+  .blog-details .post-details-meta h4 {font-size: 22px; margin-bottom: 15px;}
   .blog-details .post-details-meta .list-item li {font-size: 18px; margin-bottom: 18px;}
   .blog-details .grey-bg {padding: 30px 20px;}
   .blog-details .blog-inner-title {font-size: 30px; margin-bottom: 5px;}
