--- a/public/assets/scss/_blog.scss
+++ b/public/assets/scss/_blog.scss
@@ -438,8 +438,18 @@
                  margin-top: 15px;
             }
         }
-        h3 {
+        h2 {
             font-size: 32px;
+            margin-bottom: 20px;
+        }
+
+        h3 {
+            font-size: 27px;
+            margin-bottom: 20px;
+        }
+
+        h3 {
+            font-size: 22px;
             margin-bottom: 20px;
         }
         .list-item li {
