--- a/public/assets/scss/_responsive.scss
+++ b/public/assets/scss/_responsive.scss
@@ -87,7 +87,7 @@
   .service-details .details-meta h3 {font-size: 36px;}
   .service-details .details-meta .quote-wrapper {padding: 50px 40px 60px;}
   .service-details .details-meta .quote-wrapper blockquote {font-size: 42px;}
-  .blog-meta-four .post-data .blog-title h1, h4 {font-size: 38px;}
+  .blog-meta-four .post-data .blog-title h1{font-size: 38px;}
   .hero-banner-six .hero-heading {font-size: 85px;}
   .block-feature-eleven .slider-wrapper {width: 110vw;}
   .card-style-eighteen blockquote {font-size: 30px;}
