--- a/public/assets/scss/_shop.scss
+++ b/public/assets/scss/_shop.scss
@@ -353,6 +353,8 @@
                 img {
                     max-height: 100%; 
                     max-width: none;
+                    width: 100%;
+                    height: 100%;
                 }
                 .product-img {
                     display: block; 
